--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ analyseServer/ASanalyse.pyc
 analyseServer/ASregister.pyc
 analyseServer/ASstatus.pyc
 manageServer/MSdatabase.pyc
+.vscode/settings.json
