--- a/database/config.json
+++ b/database/config.json
@@ -2,6 +2,7 @@
     "name" : "manager",
     "databaseserver":
     {
+        "name": "vasystem",
         "ip": "127.0.0.1",
         "port": 3306,
         "username": "root"
