--- a/analyseServer/config.json
+++ b/analyseServer/config.json
@@ -3,6 +3,7 @@
     "code": 4003,
     "ipaddr": "192.168.0.101",
     "gpuid": 0,
+    "localdir": "/myShare/data/",
     "databaseserver":
     {
         "name": "vasystem",
@@ -13,6 +14,6 @@
     "storageserver":
     {
         "ip": "127.0.0.1",
-        "dir": "/home/knowvision/data/"
+        "dir": "/myShare/data/"
     }
 }
