--- a/captureServer/config.json
+++ b/captureServer/config.json
@@ -5,6 +5,7 @@
     "localdir":"./image/",
     "databaseserver":
     {
+        "name": "vasystem",
         "ip": "127.0.0.1",
         "port": 3306,
         "username": "root"
